# clicker

./: .gitignore  CHANGELOG.md  COMMIT_CHECKLIST_v2.0.md  Clicker-v2.2.1.spec  Clicker-v2.2.2.spec  Clicker.spec  DISTRIBUTION.md  PROFILE_USAGE.md  README.md  REFACTOR_STATUS.md  REFACTOR_SUMMARY.md  RELEASE_NOTES_v2.0.md  TODO.txt  app_fixes.py  clicker.log.1  commit_message_v2.1.2.txt  feature_suggestions.md  fix_automation_state.py  implementation_roadmap.md  improved_automation_engine.py  improved_config_management.py  keystroke_log.txt  keystrokes.txt  main.py  main_new.py  pyproject.toml  refactor.txt  refactor_execution_plan.md  requirements.txt  settings.json  temp_header_1.md  test_change.txt  test_fixes.py  test_settings_migration.py  test_timer.py  verify_build.py  vibe_prompts.md
.specstory/history/: 2025-05-20_12-49-troubleshooting-lock-file-and-key-chord-issues.md  2025-05-21_00-42-program-exit-and-text-fading-issues.md  2025-05-21_17-16-beep-style-reliability-issues.md  2025-05-21_18-18-feature-addition-key-execution-order-control.md  2025-05-21_18-44-packaging-software-into-executable.md  2025-05-21_20-22-merging-branches-in-git.md  2025-05-22_00-47-implementing-visual-indicator-in-pygame.md  2025-05-22_01-11-gdi-alert-system-performance-issues.md  2025-05-22_01-39-implementing-global-cooldown-feature.md  2025-05-22_01-56-version-release-preparation-checklist.md  2025-05-22_02-06-gdi-overlay-bug-and-user-dialogue-fix.md  2025-05-22_02-22-logging-error-and-file-growth-issues.md  2025-05-22_02-54-software-update-and-release-preparation.md  2025-05-22_03-44-stagger-time-and-global-cooldown-discussion.md  2025-05-22_04-09-random-key-selection-for-identical-timestamps.md  2025-05-22_04-17-optimizing-key-press-performance-issues.md  2025-05-22_05-01-implementing-auto-update-via-github-releases.md  2025-05-22_05-23-gdi-overlay-toggle-issues.md  2025-05-22_06-47-creating-a-new-executable.md  2025-05-22_20-02-code-review-and-feature-suggestions.md  2025-05-22_20-56-mid-refactor-review-and-next-steps.md  2025-05-22_21-24-continuing-code-refactor-progress.md  2025-05-22_21-36-code-refactor-connection-issue.md  2025-05-22_21-48-redundant-admin-request-dialog-issue.md  2025-05-22_21-57-visual-indicator-error-troubleshooting.md  2025-05-22_22-05-automation-error-troubleshooting.md  2025-05-22_23-19-gdi-overlay-and-update-dialogue-issues.md  2025-05-22_23-30-code-review-for-2-0-release-architecture.md  2025-05-22_23-44-code-cleanup-and-log-rotation-guidelines.md  2025-05-23_00-48-continuing-the-todo-list-progress.md  2025-05-23_01-01-refactoring-and-todo-implementation.md  2025-05-23_01-10-task-progress-and-next-steps.md  2025-05-23_01-19-connection-issue-during-todo-refactor.md  2025-05-23_01-26-api-documentation-and-testing-tasks.md  2025-05-23_01-43-build-script-verification-and-binary-creation.md  2025-05-23_03-54-investigating-file-watcher-issue.md  2025-05-23_04-07-bug-review-for-minor-release.md  2025-05-23_12-56-resuming-code-review-and-bug-fix.md  2025-05-23_13-06-codebase-organization-before-commit.md  2025-05-23_13-34-code-cleanup-and-archiving-discussion.md  (+4 more)
clicker/: __init__.py  app.py
clicker/cli/: __init__.py  profile_manager.py
clicker/config/: __init__.py  enums.py  manager.py  models.py
docs/: API.md  INDEX.md  README.md  RELEASE_NOTES_v2.1.1.md  RELEASE_NOTES_v2.1.2.md  RELEASE_NOTES_v2.1.md  cli-reference.md  config-schema.md  configuration.md  getting-started.md  hotkeys.md  release-notes.md  troubleshooting.md
scripts/: README.md  disable_admin_prompts.py  prepare_release.py
tests/: README.md  conftest.py  run_tests.py
(+44 files in other folders)
